Renaming of the load balancing options

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,4 +1,8 @@
 -------------------------------------------------------------------------------
+ 0.8.0Aplha4 by The SABnzbd-Team
+-------------------------------------------------------------------------------
+- Newsserver IPv6 load balancing aka Happy Eyeballs / RFC 6555
+-------------------------------------------------------------------------------
  0.8.0Aplha3 by The SABnzbd-Team
 -------------------------------------------------------------------------------
 - New skin: Glitter
