--- a/po/nsis/nl.po
+++ b/po/nsis/nl.po
@@ -8,26 +8,26 @@ msgstr ""
 "Project-Id-Version: sabnzbd\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2015-04-25 09:51+0000\n"
-"PO-Revision-Date: 2015-04-25 09:25+0000\n"
-"Last-Translator: shypike <Unknown>\n"
+"PO-Revision-Date: 2015-09-10 07:52+0000\n"
+"Last-Translator: Safihre <safihre@sabnzbd.org>\n"
 "Language-Team: Dutch <nl@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2015-04-26 05:46+0000\n"
-"X-Generator: Launchpad (build 17430)\n"
+"X-Launchpad-Export-Date: 2015-09-11 06:02+0000\n"
+"X-Generator: Launchpad (build 17720)\n"
 
 #: NSIS_Installer.nsi:416
 msgid "Go to the SABnzbd Wiki"
-msgstr "Ga naar de SABnzbd Wiki"
+msgstr "Ga naar de SABnzbd-Wiki"
 
 #: NSIS_Installer.nsi:418
 msgid "Show Release Notes"
-msgstr "Toon vrijgave bericht"
+msgstr "Toon opmerkingen bij deze uitgave"
 
 #: NSIS_Installer.nsi:420
 msgid "Support the project, Donate!"
-msgstr "Steun het project, Doneer!"
+msgstr "Steun het project, doneer!"
 
 #: NSIS_Installer.nsi:422
 msgid "Please close \"SABnzbd.exe\" first"
@@ -39,7 +39,7 @@ msgstr "Dit verwijdert SABnzbd van je systeem"
 
 #: NSIS_Installer.nsi:426
 msgid "Run at startup"
-msgstr "Opstarten bij systeem start"
+msgstr "Starten met Windows"
 
 #: NSIS_Installer.nsi:428
 msgid "Desktop Icon"
@@ -47,7 +47,7 @@ msgstr "Bureaubladpictogram"
 
 #: NSIS_Installer.nsi:430
 msgid "NZB File association"
-msgstr "NZB bestanden koppelen aan SABnzbd"
+msgstr "NZB-bestanden openen met SABnzbd"
 
 #: NSIS_Installer.nsi:432
 msgid "Delete Program"
@@ -55,7 +55,7 @@ msgstr "Programma verwijderen"
 
 #: NSIS_Installer.nsi:434
 msgid "Delete Settings"
-msgstr "Verwijder instellingen"
+msgstr "Verwijder alle instellingen"
 
 #: NSIS_Installer.nsi:436
 msgid ""
@@ -95,10 +95,3 @@ msgstr "Je instellingen en bestanden blijven behouden."
 #~ msgstr ""
 #~ "                  >>>> WAARSCHUWING <<<<\\\\r\\\\n\\\\r\\\\nLees eerst het "
 #~ "vrijgave bericht of ga naar http://wiki.sabnzbd.org/introducing-0-7-0 !"
-
-#~ msgid ""
-#~ "                  >>>> WARNING <<<<\\r\\n\\r\\nPlease, first check the "
-#~ "release notes or go to http://wiki.sabnzbd.org/introducing-0-8-0 !"
-#~ msgstr ""
-#~ "                  >>>> WAARSCHUWING <<<<\\r\\n\\r\\nLees eerst het vrijgave "
-#~ "bericht of ga naar http://wiki.sabnzbd.org/introducing-0-8-0 !"
