Correct quoting in Chinese email templates.

--- a/po/email/zh_CN.po
+++ b/po/email/zh_CN.po
@@ -75,7 +75,7 @@ msgstr ""
 "To: $to\n"
 "From: $from\n"
 "Date: $date\n"
-"Subject: SABnzbd 已<!--#if $status then \\\"完成\\\" else \\\"失败\\\" #-->任务 "
+"Subject: SABnzbd 已<!--#if $status then \"完成\" else \"失败\" #-->任务 "
 "$name\n"
 "X-priority: 5\n"
 "X-MS-priority: 5\n"
@@ -83,11 +83,11 @@ msgstr ""
 "\n"
 "Hi,\n"
 "<!--#if $status #-->\n"
-"SABnzbd 已完成 \\\"$name\\\" 的下载 <!--#if $msgid==\\\"\\\" then \\\"\\\" else \\"
-"\"(newzbin #\\\" + $msgid + \\\")\\\"#-->\n"
+"SABnzbd 已完成 \"$name\" 的下载 <!--#if $msgid==\"\" then \"\" else "
+"\"(newzbin #\" + $msgid + \")\"#-->\n"
 "<!--#else#-->\n"
-"SABnzbd 下载 \\\"$name\\\" 失败 <!--#if $msgid==\\\"\\\" then \\\"\\\" else \\"
-"\"(newzbin #\\\" + $msgid + \\\")\\\"#-->\n"
+"SABnzbd 下载 \"$name\" 失败 <!--#if $msgid==\"\" then \"\" else "
+"\"(newzbin #\" + $msgid + \")\"#-->\n"
 "<!--#end if#-->\n"
 "完成于 $end_time\n"
 "已下载 $size\n"
@@ -99,8 +99,8 @@ msgstr ""
 "    $result <!--#slurp#-->\n"
 "<!--#end for#-->\n"
 "<!--#end for#-->\n"
-"<!--#if $script!=\\\"\\\" #-->\n"
-"用户脚本 \\\"$script\\\" 输出内容 (退出代码 = $script_ret):\n"
+"<!--#if $script!=\"\" #-->\n"
+"用户脚本 \"$script\" 输出内容 (退出代码 = $script_ret):\n"
 "$script_output\n"
 "<!--#end if#-->\n"
 "<!--#if $status #-->\n"
@@ -156,7 +156,7 @@ msgstr ""
 "Hi,\n"
 "\n"
 "SABnzbd 已将 $amount 项任务加入队列。\n"
-"它们出自 RSS feed \\\"$feed\\\"。\n"
+"它们出自 RSS feed \"$feed\"。\n"
 "<!--#for $job in $jobs#-->\n"
 "    $job <!--#slurp#-->\n"
 "<!--#end for#-->\n"
