--- a/po/email/zh_CN.po
+++ b/po/email/zh_CN.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: sabnzbd\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2015-04-25 09:21+0000\n"
-"PO-Revision-Date: 2013-05-05 14:50+0000\n"
-"Last-Translator: XsLiDian <xslidian@gmail.com>\n"
+"PO-Revision-Date: 2015-10-24 11:05+0000\n"
+"Last-Translator: shypike <Unknown>\n"
 "Language-Team: Chinese (Simplified) <zh_CN@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2015-04-26 05:45+0000\n"
-"X-Generator: Launchpad (build 17430)\n"
+"X-Launchpad-Export-Date: 2015-10-25 05:43+0000\n"
+"X-Generator: Launchpad (build 17812)\n"
 
 #: email/email.tmpl:1
 msgid ""
@@ -75,19 +75,18 @@ msgstr ""
 "To: $to\n"
 "From: $from\n"
 "Date: $date\n"
-"Subject: SABnzbd 已<!--#if $status then \\\"完成\\\" else \\\"失败\\\" #-->任务 "
-"$name\n"
+"Subject: SABnzbd 已<!--#if $status then \"完成\" else \"失败\" #-->任务 $name\n"
 "X-priority: 5\n"
 "X-MS-priority: 5\n"
 "## 到主体部分时，必须要有空行!\n"
 "\n"
 "Hi,\n"
 "<!--#if $status #-->\n"
-"SABnzbd 已完成 \\\"$name\\\" 的下载 <!--#if $msgid==\\\"\\\" then \\\"\\\" else \\"
-"\"(newzbin #\\\" + $msgid + \\\")\\\"#-->\n"
+"SABnzbd 已完成 \"$name\" 的下载 <!--#if $msgid==\"\" then \"\" else \"(newzbin #\" "
+"+ $msgid + \")\"#-->\n"
 "<!--#else#-->\n"
-"SABnzbd 下载 \\\"$name\\\" 失败 <!--#if $msgid==\\\"\\\" then \\\"\\\" else \\"
-"\"(newzbin #\\\" + $msgid + \\\")\\\"#-->\n"
+"SABnzbd 下载 \"$name\" 失败 <!--#if $msgid==\"\" then \"\" else \"(newzbin #\" + "
+"$msgid + \")\"#-->\n"
 "<!--#end if#-->\n"
 "完成于 $end_time\n"
 "已下载 $size\n"
@@ -99,8 +98,8 @@ msgstr ""
 "    $result <!--#slurp#-->\n"
 "<!--#end for#-->\n"
 "<!--#end for#-->\n"
-"<!--#if $script!=\\\"\\\" #-->\n"
-"用户脚本 \\\"$script\\\" 输出内容 (退出代码 = $script_ret):\n"
+"<!--#if $script!=\"\" #-->\n"
+"用户脚本 \"$script\" 输出内容 (退出代码 = $script_ret):\n"
 "$script_output\n"
 "<!--#end if#-->\n"
 "<!--#if $status #-->\n"
@@ -156,7 +155,7 @@ msgstr ""
 "Hi,\n"
 "\n"
 "SABnzbd 已将 $amount 项任务加入队列。\n"
-"它们出自 RSS feed \\\"$feed\\\"。\n"
+"它们出自 RSS feed \"$feed\"。\n"
 "<!--#for $job in $jobs#-->\n"
 "    $job <!--#slurp#-->\n"
 "<!--#end for#-->\n"
