--- a/po/main/da.po
+++ b/po/main/da.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: sabnzbd\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2015-09-25 19:42+0000\n"
-"PO-Revision-Date: 2015-11-06 05:23+0000\n"
-"Last-Translator: Rene <Unknown>\n"
+"PO-Revision-Date: 2015-11-08 15:46+0000\n"
+"Last-Translator: shypike <Unknown>\n"
 "Language-Team: Danish <da@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2015-11-07 05:12+0000\n"
+"X-Launchpad-Export-Date: 2015-11-09 05:36+0000\n"
 "X-Generator: Launchpad (build 17838)\n"
 
 #: SABnzbd.py:329 [Error message]
