--- a/po/nsis/fr.po
+++ b/po/nsis/fr.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: sabnzbd\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2015-04-25 09:51+0000\n"
-"PO-Revision-Date: 2013-05-05 14:50+0000\n"
-"Last-Translator: Fox Ace <Unknown>\n"
+"PO-Revision-Date: 2015-12-07 07:47+0000\n"
+"Last-Translator: Fred <88com88@gmail.com>\n"
 "Language-Team: French <fr@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2015-04-26 05:46+0000\n"
-"X-Generator: Launchpad (build 17430)\n"
+"X-Launchpad-Export-Date: 2015-12-08 05:47+0000\n"
+"X-Generator: Launchpad (build 17862)\n"
 
 #: NSIS_Installer.nsi:416
 msgid "Go to the SABnzbd Wiki"
@@ -27,11 +27,11 @@ msgstr "Afficher les notes de version"
 
 #: NSIS_Installer.nsi:420
 msgid "Support the project, Donate!"
-msgstr "Supportez le projet, faites un don !"
+msgstr "Soutenez le projet, faites un don !"
 
 #: NSIS_Installer.nsi:422
 msgid "Please close \"SABnzbd.exe\" first"
-msgstr "Quittez \"SABnzbd.exe\" avant l'installation, SVP"
+msgstr "Merci de fermer \"SABnzbd.exe\" avant l'installation"
 
 #: NSIS_Installer.nsi:424
 msgid "This will uninstall SABnzbd from your system"
@@ -55,7 +55,7 @@ msgstr "Supprimer le programme"
 
 #: NSIS_Installer.nsi:434
 msgid "Delete Settings"
-msgstr "Supprimer les Paramètres"
+msgstr "Supprimer les paramètres"
 
 #: NSIS_Installer.nsi:436
 msgid ""
@@ -67,15 +67,15 @@ msgstr ""
 
 #: NSIS_Installer.nsi:438
 msgid "Downloading Microsoft runtime installer..."
-msgstr "Téléchargement de Microsoft runtime installateur ..."
+msgstr "Téléchargement de Microsoft runtime installer..."
 
 #: NSIS_Installer.nsi:440
 msgid "Download error, retry?"
-msgstr "Erreur téléchargement, réessayer?"
+msgstr "Erreur de téléchargement, réessayer ?"
 
 #: NSIS_Installer.nsi:442
 msgid "Cannot install without runtime library, retry?"
-msgstr "Impossible d'installer sans bibliothèque d'exécution, réessayer?"
+msgstr "Impossible d'installer sans moteur d'exécution, réessayer?"
 
 #: NSIS_Installer.nsi:444
 msgid ""
@@ -88,7 +88,7 @@ msgstr ""
 
 #: NSIS_Installer.nsi:446
 msgid "Your settings and data will be preserved."
-msgstr "Vos paramètres et les données seront conservées."
+msgstr "Vos paramètres et données seront conservés."
 
 #~ msgid ""
 #~ "                  >>>> WARNING <<<<\\r\\n\\r\\nPlease, first check the "
