--- a/po/main/de.po
+++ b/po/main/de.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: sabnzbd\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2015-12-10 15:12+0000\n"
-"PO-Revision-Date: 2015-12-10 09:31+0000\n"
-"Last-Translator: Safihre <safihre@sabnzbd.org>\n"
+"PO-Revision-Date: 2015-12-12 12:01+0000\n"
+"Last-Translator: shypike <Unknown>\n"
 "Language-Team: German <de@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2015-12-11 05:57+0000\n"
+"X-Launchpad-Export-Date: 2015-12-13 05:31+0000\n"
 "X-Generator: Launchpad (build 17865)\n"
 
 #: SABnzbd.py:326 [Error message]
@@ -197,7 +197,8 @@ msgstr "Abgebrochen, Verschlüsselung vorhanden"
 #: sabnzbd/assembler.py:127 [Warning message]
 msgid ""
 "WARNING: In \"%s\" unwanted extension in RAR file. Unwanted file is %s "
-msgstr "WARNUNG: Unerwünschter Typ in RAR Datei. Unerwünschte Datei ist %s "
+msgstr ""
+"WARNUNG: Unerwünschter Typ \"%s\" in RAR Datei. Unerwünschte Datei ist %s "
 
 #: sabnzbd/assembler.py:128
 msgid "Unwanted extension is in rar file %s"
@@ -733,7 +734,7 @@ msgstr "Rechte von %s konnten nicht geändert werden"
 
 #: sabnzbd/newsunpack.py:201 [Warning message]
 msgid "Unpack nesting too deep [%s]"
-msgstr "Entpacken zu tief verschachtelt"
+msgstr "Entpacken zu tief verschachtelt [%s]"
 
 #: sabnzbd/newsunpack.py:382
 msgid "Joining"
@@ -991,7 +992,7 @@ msgstr "Fehler beim Laden von %s. Beschädigte Datei gefunden."
 
 #: sabnzbd/nzbqueue.py:243 [Error message]
 msgid "Failed to restart NZB after pre-check (%s)"
-msgstr "NZB konnte nach Vorab-Check nicht neugestartet werden"
+msgstr "NZB konnte nach Vorab-Check nicht neugestartet werden (%s)"
 
 #: sabnzbd/nzbqueue.py:318 [Error message]
 msgid "Error while adding %s, removing"
