--- a/po/main/pt_BR.po
+++ b/po/main/pt_BR.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: sabnzbd\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2015-12-10 15:12+0000\n"
-"PO-Revision-Date: 2015-12-07 07:46+0000\n"
-"Last-Translator: diegosps <diegosps@gmail.com>\n"
+"PO-Revision-Date: 2015-12-12 12:03+0000\n"
+"Last-Translator: shypike <Unknown>\n"
 "Language-Team: Brazilian Portuguese <pt_BR@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2015-12-11 05:57+0000\n"
+"X-Launchpad-Export-Date: 2015-12-13 05:32+0000\n"
 "X-Generator: Launchpad (build 17865)\n"
 
 #: SABnzbd.py:326 [Error message]
@@ -1435,7 +1435,7 @@ msgstr "%s executado"
 
 #: sabnzbd/postproc.py:466
 msgid "Script exit code is %s"
-msgstr "Código de saída do script é %S"
+msgstr "Código de saída do script é %s"
 
 #: sabnzbd/postproc.py:485
 msgid "More"
