--- a/po/main/ro.po
+++ b/po/main/ro.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: sabnzbd\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2015-12-10 15:12+0000\n"
-"PO-Revision-Date: 2015-12-05 14:44+0000\n"
-"Last-Translator: nicusor <Unknown>\n"
+"PO-Revision-Date: 2015-12-12 12:04+0000\n"
+"Last-Translator: shypike <Unknown>\n"
 "Language-Team: Romanian <ro@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2015-12-11 05:57+0000\n"
+"X-Launchpad-Export-Date: 2015-12-13 05:31+0000\n"
 "X-Generator: Launchpad (build 17865)\n"
 
 #: SABnzbd.py:326 [Error message]
@@ -218,7 +218,7 @@ msgstr "ATENȚIE: Sarcina \"%s\" anulată datorită ratingului (%s)"
 
 #: sabnzbd/assembler.py:145
 msgid "Aborted, rating filter matched (%s)"
-msgstr "Abandonat, filtru de rating potrivit"
+msgstr "Abandonat, filtru de rating potrivit (%s)"
 
 #: sabnzbd/assembler.py:180
 msgid "%s missing"
