--- a/po/main/zh_CN.po
+++ b/po/main/zh_CN.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: sabnzbd\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2015-12-24 10:42+0000\n"
-"PO-Revision-Date: 2015-12-28 10:20+0000\n"
-"Last-Translator: Safihre <safihre@sabnzbd.org>\n"
+"PO-Revision-Date: 2016-01-20 10:47+0000\n"
+"Last-Translator: XsLiDian <xslidian@gmail.com>\n"
 "Language-Team: Chinese (Simplified) <zh_CN@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2015-12-29 05:33+0000\n"
-"X-Generator: Launchpad (build 17865)\n"
+"X-Launchpad-Export-Date: 2016-01-21 05:52+0000\n"
+"X-Generator: Launchpad (build 17886)\n"
 
 #: SABnzbd.py:326 [Error message]
 msgid "Failed to start web-interface"
@@ -2262,7 +2262,7 @@ msgstr "+ 调试"
 
 #: sabnzbd/skintext.py:262 [Status page tab header] # sabnzbd/skintext.py:538 [Server: amount of connections]
 msgid "Connections"
-msgstr "个连接"
+msgstr "连接"
 
 #: sabnzbd/skintext.py:263 [Status page, title for email test result]
 msgid "Email Test Result"
@@ -3369,7 +3369,7 @@ msgstr "请求文章之前发送 group 命令。"
 
 #: sabnzbd/skintext.py:556
 msgid "Only use this server for these categories."
-msgstr "这些分类只使用该服务器。"
+msgstr "只为这些分类使用该服务器。"
 
 #: sabnzbd/skintext.py:557
 msgid "Personal notes"
