--- a/README.mkd
+++ b/README.mkd
@@ -1,5 +1,12 @@
-Release Notes  -  SABnzbd 0.8.0Beta6
+Release Notes  -  SABnzbd 1.0.0RC1
 ====================================
+
+## Changes in RC1
+- Bump version from 0.8.0RC1 to 1.0.0RC1
+- Fixed "disk-full" notification
+- Glitter: several small problems fixed
+- OSX: fixed error message that comes when job with accented characters completes
+- Fixed diskspeed meter (in Glitter)
 
 ## Changes in Beta6
 - Fixed issues in Config->Server (Firefox)
@@ -68,7 +75,7 @@ Release Notes  -  SABnzbd 0.8.0Beta6
 - Diagnostic dashboard tab for "Status" page
 
 
-## What's new in 0.8.0
+## What's new in 1.0.0
 
 - Full Unicode support with Chinese and Russian translations
 - Improved Notifications (including Prowl)
@@ -92,7 +99,7 @@ Release Notes  -  SABnzbd 0.8.0Beta6
   (c) Copyright 2007-2016 by "The SABnzbd-team" \<team@sabnzbd.org\>
 
 
-### IMPORTANT INFORMATION about release 0.8.0
+### IMPORTANT INFORMATION about release 1.0.0
 <http://wiki.sabnzbd.org/introducing-1-0-0>
 
 ### Known problems and solutions
@@ -105,7 +112,7 @@ Release Notes  -  SABnzbd 0.8.0Beta6
 - Start SABnzbd
 
 The organization of the download queue is different from older versions.
-0.8.x will not see the existing queue, but you can go to
+1.0.x will not see the existing queue, but you can go to
 Status->QueueRepair and "Repair" the old queue.
 Also, your sabnzbd.ini file will be upgraded, making it
 incompatible with releases older than 0.7.9
