Update version numbering in develop branch

--- a/INSTALL.txt
+++ b/INSTALL.txt
@@ -1,4 +1,4 @@
-                                SABnzbd 0.8.0
+                                SABnzbd 1.1.x
 
 -------------------------------------------------------------------------------
 0) LICENSE
