--- a/README.mkd
+++ b/README.mkd
@@ -1,71 +1,34 @@
-Release Notes  -  SABnzbd 0.8.0Beta4
-====================================
+Release Notes  -  SABnzbd 1.0.0
+===============================
 
-## Changes in Beta4
-- Unicode crashes in user interface fixed
-- Glitter skin improved
-- Resume can now give notification
-- In Config->Server, show active servers before inactive ones
-- Update unrar to 5.30
-- Added Windows Notifications (local)
-- Updated many localizations
-
-## Changes in Beta3
-- Speedlimit corrections
-- Windows build now verifies https certificates
-- Windows build now supports TLS 1.2
-- Fixed bug that could lead to all NZBs being reported as duplicates
-- Skin improvements
-
-## Changes in Beta2
-- Improvements in IPv6 handling
-- Extension of SSL protocols (where supported)
-- Many improvemnts in the Glitter skin
-- On Windows, Season Sort often failed
-- Speedlimiting can now be absolute or in percentage
-- Scheduler action to remove completed history items
-
-## Changes in Beta1
-- Glitter is now the default skin
-- Glitter fixes and improvements
-- Removed Classic and Mobile skins
-- Removed Config parts of smpl and Plush skins
-- API-call "history" now accepts one or more "category" parameters in order to filter.
-- API-call "addurl" now returns a list of nzo_id's, which will be valid for the actual jobs.
-- Update unrar to release 5.21
-- Enable renaming of Usenet servers.
-- Add Pushbullet support.
-- Implement Pushover support.
-- Restore Rating function
-- Newsserver IPv6 load balancing aka Happy Eyeballs / RFC 6555
-- Lots of bug fixes
-
-## Changes in Alpha3
-- New skin: Glitter
-- Assign servers to categories
-- When upgrading from 0.7.x, a backup server will get priority 1
-- Lots of bug fixes
-
-## Changes in Alpha2
-- Server priorities instead of primary/backup ==> REVIEW YOUR SERVER SETTINGS!
-- Work-arounds to avoid bugs in PyOpenSSL 0.14
-- Support RAR's REV files to some extent
-- Diagnostic dashboard tab for "Status" page
-
-
-## What's new in 0.8.0
+## What's new in 1.0.0
 
 - Full Unicode support with Chinese and Russian translations
-- Improved Notifications (including Prowl)
+- New default UI: Glitter
+- Server priorities instead of primary/backup ==> REVIEW YOUR SERVER SETTINGS!
+- Newsserver IPv6 load balancing aka Happy Eyeballs / RFC 6555
 - Duplicate detection for series
-- Bonjour/ZeroConfig support
 - More filters in RSS
 - 7zip support
 - Option to save repair time by downloading all par2 files
 - Support for long paths in Windows (above 260)
 - Improved security for external access
 - Lots of small improvements and bug fixes
-- The "Classic" skin is gone
+- Redesign of notifications classes
+- More notification services supported
+- Diagnostic dashboard tab for "Status" page
+- Bonjour/ZeroConfig support
+
+## Remarks
+- SABnzbd's webserver now doesn't listen to IPv6 addresses by default.
+  - Use Config->Special->ipv6_hosting if you want this enabled.
+  - "localhost" will be replaced with "127.0.0.1", check any browser bookmark and third-party tool
+- Classic skin has been removed
+- Support extra parameters for par2 on other platforms than Windows
+- Option to verify HTTPS connections (default off)
+- Auto-negotiates best Usenet ssl protocol (override possible)
+- When upgrading from 0.7.x, a backup server will get priority 1
+
 
 ## About
   SABnzbd is an open-source cross-platform binary newsreader.
@@ -77,7 +40,7 @@ Release Notes  -  SABnzbd 0.8.0Beta4
   (c) Copyright 2007-2016 by "The SABnzbd-team" \<team@sabnzbd.org\>
 
 
-### IMPORTANT INFORMATION about release 0.8.0
+### IMPORTANT INFORMATION about release 1.0.0
 <http://wiki.sabnzbd.org/introducing-1-0-0>
 
 ### Known problems and solutions
@@ -90,8 +53,7 @@ Release Notes  -  SABnzbd 0.8.0Beta4
 - Start SABnzbd
 
 The organization of the download queue is different from older versions.
-0.8.x will not see the existing queue, but you can go to
+1.0.x will not see the existing queue, but you can go to
 Status->QueueRepair and "Repair" the old queue.
 Also, your sabnzbd.ini file will be upgraded, making it
 incompatible with releases older than 0.7.9
-
