Update text files for 1.0.1RC1

--- a/README.mkd
+++ b/README.mkd
@@ -1,8 +1,18 @@
-Release Notes  -  SABnzbd 1.0.0
-===============================
+Release Notes  -  SABnzbd 1.0.0RC1
+==================================
+
+## What's new in 1.0.0RC1
+- Prevent creating orphan items in "incomplete" when deleting downloading jobs.
+- Forced item with missing articles caused overflow in paused queue
+- Do not ignore files in QuickCheck
+- Fix "Download all par2 files" behavior
+- Treat ambiguous numeric values as number of minutes for custom pause time.
+- Accept MIME records that have only LF line endings (error in some third-party utilities)
+- Fix PushOver support.
+- Fix breaking Glitter bug with large script_log
+- Fix issues with deleting jobs via the API
 
 ## What's new in 1.0.0
-
 - Full Unicode support with Chinese and Russian translations
 - New default UI: Glitter
 - Server priorities instead of primary/backup ==> REVIEW YOUR SERVER SETTINGS!
